draco_trunk/llvm_c_api/core_h.ads


   function LLVMBuildPtrDiff
     (arg1 : LLVMBuilderRef;
      arg2 : LLVMValueRef;
      arg3 : LLVMValueRef;
      arg4 : Interfaces.C.Strings.chars_ptr) return LLVMValueRef;  -- Core.h:988
   pragma Import (C, LLVMBuildPtrDiff, "LLVMBuildPtrDiff");

  --===-- Module providers --------------------------------------------------===
  -- Changes the type of M so it can be passed to FunctionPassManagers and the
  -- * JIT.  They take ModuleProviders for historical reasons.
  --

   function LLVMCreateModuleProviderForExistingModule (arg1 : LLVMModuleRef) return LLVMModuleProviderRef;  -- Core.h:998
   pragma Import (C, LLVMCreateModuleProviderForExistingModule, "LLVMCreateModuleProviderForExistingModule");

  -- Destroys the module M.
  --

   procedure LLVMDisposeModuleProvider (arg1 : LLVMModuleProviderRef);  -- Core.h:1002
   pragma Import (C, LLVMDisposeModuleProvider, "LLVMDisposeModuleProvider");

  --===-- Memory buffers ----------------------------------------------------===
   function LLVMCreateMemoryBufferWithContentsOfFile
     (arg1 : Interfaces.C.Strings.chars_ptr;
      arg2 : System.Address;
      arg3 : System.Address) return LLVMBool;  -- Core.h:1007
   pragma Import (C, LLVMCreateMemoryBufferWithContentsOfFile, "LLVMCreateMemoryBufferWithContentsOfFile");

   function LLVMCreateMemoryBufferWithSTDIN (arg1 : System.Address; arg2 : System.Address) return LLVMBool;  -- Core.h:1010
   pragma Import (C, LLVMCreateMemoryBufferWithSTDIN, "LLVMCreateMemoryBufferWithSTDIN");

   procedure LLVMDisposeMemoryBuffer (arg1 : LLVMMemoryBufferRef);  -- Core.h:1012
   pragma Import (C, LLVMDisposeMemoryBuffer, "LLVMDisposeMemoryBuffer");

  --===-- Pass Managers -----------------------------------------------------===
  --* Constructs a new whole-module pass pipeline. This type of pipeline is
  --    suitable for link-time optimization and whole-module transformations.
  --    See llvm::PassManager::PassManager.

   function LLVMCreatePassManager return LLVMPassManagerRef;  -- Core.h:1020
   pragma Import (C, LLVMCreatePassManager, "LLVMCreatePassManager");

  --* Constructs a new function-by-function pass pipeline over the module
  --    provider. It does not take ownership of the module provider. This type of
  --    pipeline is suitable for code generation and JIT compilation tasks.
  --    See llvm::FunctionPassManager::FunctionPassManager.

   function LLVMCreateFunctionPassManagerForModule (arg1 : LLVMModuleRef) return LLVMPassManagerRef;  -- Core.h:1026
   pragma Import (C, LLVMCreateFunctionPassManagerForModule, "LLVMCreateFunctionPassManagerForModule");

  --* Deprecated: Use LLVMCreateFunctionPassManagerForModule instead.
   function LLVMCreateFunctionPassManager (arg1 : LLVMModuleProviderRef) return LLVMPassManagerRef;  -- Core.h:1029
   pragma Import (C, LLVMCreateFunctionPassManager, "LLVMCreateFunctionPassManager");

  --* Initializes, executes on the provided module, and finalizes all of the
  --    passes scheduled in the pass manager. Returns 1 if any of the passes
  --    modified the module, 0 otherwise. See llvm::PassManager::run(Module&).

   function LLVMRunPassManager (arg1 : LLVMPassManagerRef; arg2 : LLVMModuleRef) return LLVMBool;  -- Core.h:1034
   pragma Import (C, LLVMRunPassManager, "LLVMRunPassManager");

  --* Initializes all of the function passes scheduled in the function pass
  --    manager. Returns 1 if any of the passes modified the module, 0 otherwise.
  --    See llvm::FunctionPassManager::doInitialization.

   function LLVMInitializeFunctionPassManager (arg1 : LLVMPassManagerRef) return LLVMBool;  -- Core.h:1039
   pragma Import (C, LLVMInitializeFunctionPassManager, "LLVMInitializeFunctionPassManager");

  --* Executes all of the function passes scheduled in the function pass manager
  --    on the provided function. Returns 1 if any of the passes modified the
  --    function, false otherwise.
  --    See llvm::FunctionPassManager::run(Function&).

   function LLVMRunFunctionPassManager (arg1 : LLVMPassManagerRef; arg2 : LLVMValueRef) return LLVMBool;  -- Core.h:1045
   pragma Import (C, LLVMRunFunctionPassManager, "LLVMRunFunctionPassManager");

  --* Finalizes all of the function passes scheduled in in the function pass
  --    manager. Returns 1 if any of the passes modified the module, 0 otherwise.
  --    See llvm::FunctionPassManager::doFinalization.

   function LLVMFinalizeFunctionPassManager (arg1 : LLVMPassManagerRef) return LLVMBool;  -- Core.h:1050
   pragma Import (C, LLVMFinalizeFunctionPassManager, "LLVMFinalizeFunctionPassManager");

  --* Frees the memory of a pass pipeline. For function pipelines, does not free
  --    the module provider.
  --    See llvm::PassManagerBase::~PassManagerBase.

   procedure LLVMDisposePassManager (arg1 : LLVMPassManagerRef);  -- Core.h:1055
   pragma Import (C, LLVMDisposePassManager, "LLVMDisposePassManager");

  -- LLVMModuleProviderRef exists for historical reasons, but now just holds a
  --   * Module.
  --

  -- Specialized opaque context conversions.
  --

  -- Specialized opaque type conversions.
  --

  -- Specialized opaque value conversions.
  --

end Core_h;
